--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: ^2.30.0         # Inicialización de Firebase
   firebase_auth: ^4.17.0         # Autenticación de usuarios
   cloud_firestore: 4.17.5
+  flutter_application_1: ^0.0.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
