--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,13 @@ dependencies:
   cloud_firestore: 4.17.5
   flutter_application_1: ^0.0.2
   path_provider: ^2.1.5
+  pdf: ^3.10.6
+  printing: ^5.12.0
+  file_picker: ^6.1.1
+  intl: ^0.20.2
+  downloads_path_provider_28: ^1.0.5
+  permission_handler: ^11.3.1
+  file_selector: ^1.0.3
 
 dev_dependencies:
   flutter_test:
