--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,23 +13,28 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0           # Fuentes de Google
   fl_chart: ^1.0.0  # ✅ Gráficos compatibles
-  firebase_core: ^2.30.0         # Inicialización de Firebase
-  firebase_auth: ^4.17.0         # Autenticación de usuarios
-  cloud_firestore: 4.17.5
+  firebase_core: ^3.15.2         # Inicialización de Firebase
+  firebase_auth: ^5.7.0         # Autenticación de usuarios
+  cloud_firestore: ^5.6.12
   flutter_application_1: ^0.0.2
   path_provider: ^2.1.5
-  pdf: ^3.10.6
-  printing: ^5.12.0
-  file_picker: ^6.1.1
+  pdf: ^3.10.4
+  printing: ^5.11.0
+  http: ^1.4.0
   intl: ^0.20.2
+
+
+
   
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.1
   file_selector: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
+
 
 flutter:
   uses-material-design: true
@@ -37,7 +42,9 @@ flutter:
   assets:
     - assets/icons/
 
+flutter_launcher_icons:
+  android: true
+  ios: false # cambia a true si también querés íconos para iOS
+  image_path: "assets/icons/Logo-sin-fondo.png" # ⚠️ Reemplazá con la ruta correcta
 
 
-  # assets:
-  #   - images/
